<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="414dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/idLibroTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/val_id_libro"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tituloLibroTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/val_titulo_libro"
                app:layout_constraintStart_toEndOf="@+id/idLibroTxt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/autorLibroTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/val_autor_libro"
                app:layout_constraintStart_toStartOf="@+id/tituloLibroTxt"
                app:layout_constraintTop_toBottomOf="@+id/tituloLibroTxt" />

            <TextView
                android:id="@+id/paginasLibrioTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/val_paginas_libro"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>