<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleLibroActivity"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detalleInputTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detalleInputAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_autor"
        app:layout_constraintEnd_toEndOf="@+id/detalleInputTitulo"
        app:layout_constraintStart_toStartOf="@+id/detalleInputTitulo"
        app:layout_constraintTop_toBottomOf="@+id/detalleInputTitulo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detalleInputPaginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_num_paginas"
        app:layout_constraintEnd_toEndOf="@+id/detalleInputAutor"
        app:layout_constraintStart_toStartOf="@+id/detalleInputAutor"
        app:layout_constraintTop_toBottomOf="@+id/detalleInputAutor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detalleBtnUpdate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_apdate_libro"
        app:icon="@drawable/ic_check_circle"
        app:layout_constraintEnd_toEndOf="@+id/detalleInputPaginas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detalleInputPaginas"
        app:layout_constraintTop_toBottomOf="@+id/detalleInputPaginas" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detalleBtnEliminarLibro"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_delete_libro"
        android:backgroundTint="@color/purple_200"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detalleBtnUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detalleBtnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/detalleBtnUpdate"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>